# zenair

./: .gitignore  README.md  example.env  pyproject.toml  pytest.ini
zip_airlines/: .coverage  pytest.ini
zip_airlines/api/: admin.py  models.py  serializers.py  urls.py  views.py
zip_airlines/api/migrations/: 0001_initial.py  0002_airplane_alter_customuser_managers.py  0003_remove_airplane_fuel_capacity_and_more.py
zip_airlines/tests/: test_serializers.py
zip_airlines/zip_airlines/: asgi.py  openapi_urls.py  settings.py  urls.py  wsgi.py
